--- a/src/components/Modal/styles/styles.scss
+++ b/src/components/Modal/styles/styles.scss
@@ -115,7 +115,7 @@
 .modalBodyFooterContainer {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+  margin: 20px 0;
   width: 100%;
 }
 
