--- a/src/styles/components/styles.scss
+++ b/src/styles/components/styles.scss
@@ -1,3 +1,4 @@
 @import "../../components/Modal/styles/styles.scss";
 // @import "../../components/InputText/styles/styles.scss";
 @import "../../components/Button/styles/styles.scss";
+@import "../../components/Accordion/styles/styles.scss";
