--- a/src/app/landing/styles/styles.scss
+++ b/src/app/landing/styles/styles.scss
@@ -1,2 +1,22 @@
 @import "./components/VideoSection/styles.scss";
 @import "./components/StatsSection/styles.scss";
+
+// TODO refatorar este codigo no lugar certo
+.bannerCardText {
+  margin-top: 18px;
+  span {
+    font-weight: 400;
+    font-size: 12px;
+    color: #b6b6b6;
+    margin-bottom: 5px;
+  }
+  h6 {
+    font-weight: 400;
+    font-size: 16px;
+    color: #ffffff;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+}
