--- a/src/styles/components/styles.scss
+++ b/src/styles/components/styles.scss
@@ -3,3 +3,4 @@
 // @import "../../components/InputText/styles/styles.scss";
 @import "../../components/Button/styles/styles.scss";
 @import "../../components/Accordion/styles/styles.scss";
+@import "../../components/Carousel/styles/styles.scss";
