💄 UI fixes fixes some minor UI issues on Button & Carousel

--- a/src/app/landing/styles/components/VideoSection/styles.scss
+++ b/src/app/landing/styles/components/VideoSection/styles.scss
@@ -19,7 +19,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
-  div {
+  .videoSectionText {
     margin-bottom: 15px;
     span {
       font-weight: 400;
