✨ Card Component added card component && landing Page

--- a/src/styles/components/styles.scss
+++ b/src/styles/components/styles.scss
@@ -4,3 +4,4 @@
 @import "../../components/Button/styles/styles.scss";
 @import "../../components/Accordion/styles/styles.scss";
 @import "../../components/Carousel/styles/styles.scss";
+@import "../../components/Card/styles/styles.scss";
