--- a/src/styles/config/base.scss
+++ b/src/styles/config/base.scss
@@ -335,3 +335,20 @@ html {
 .action-icon {
   cursor: pointer;
 }
+
+//texts
+.text-center {
+  text-align: center;
+}
+
+.text-regular-b6 {
+  font-size: 16px;
+  color: #b6b6b6;
+  font-weight: 400;
+}
+
+.text-large-ff {
+  font-weight: 400;
+  font-size: 28px;
+  color: #ffffff;
+}
