--- a/src/styles/components/styles.scss
+++ b/src/styles/components/styles.scss
@@ -1,7 +1,7 @@
-@import "../../components/Header/styles/styles.scss";
-@import "../../components/Modal/styles/styles.scss";
-// @import "../../components/InputText/styles/styles.scss";
-@import "../../components/Button/styles/styles.scss";
-@import "../../components/Accordion/styles/styles.scss";
-@import "../../components/Carousel/styles/styles.scss";
-@import "../../components/Card/styles/styles.scss";
+@import "../../components/Header/styles/styles.module.scss";
+@import "../../components/Modal/styles/styles.module.scss";
+// @import "../../components/InputText/styles/styles.module.scss";
+@import "../../components/Button/styles/styles.module.scss";
+@import "../../components/Accordion/styles/styles.module.scss";
+@import "../../components/Carousel/styles/styles.module.scss";
+@import "../../components/Card/styles/styles.module.scss";
