--- a/src/app/landing/styles/styles.scss
+++ b/src/app/landing/styles/styles.scss
@@ -1,3 +1,3 @@
-@import "./components/VideoSection/styles.scss";
-@import "./components/StatsSection/styles.scss";
+@import "./components/VideoSection/styles.module.scss";
+@import "./components/StatsSection/styles.module.scss";
 
