--- a/src/components/Card/styles/styles.module.scss
+++ b/src/components/Card/styles/styles.module.scss
@@ -1,7 +1,7 @@
 .cardContainer {
   min-width: 50px;
   min-height: 50px;
-  background: #5f5c6b;
+  background: var(--card-background-color);
   border-radius: 10px;
   .cardContent {
     display: flex;
