--- a/src/app/landing/components/LastNewsSection/styles/styles.module.scss
+++ b/src/app/landing/components/LastNewsSection/styles/styles.module.scss
@@ -2,15 +2,10 @@
 .bannerCardText {
   margin-top: 18px;
   span {
-    font-weight: 400;
-    font-size: 12px;
-    color: #b6b6b6;
+    color: var(--color-random-gray);
     margin-bottom: 5px;
   }
-  h6 {
-    font-weight: 400;
-    font-size: 16px;
-    color: #ffffff;
+  p {
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
