--- a/src/app/landing/styles/styles.scss
+++ b/src/app/landing/styles/styles.scss
@@ -1,3 +1,9 @@
-@import "./components/VideoSection/styles.module.scss";
-@import "./components/StatsSection/styles.module.scss";
+@import "./../components/LastNewsSection/styles/styles.module.scss";
+@import "./../components/StatsSection/styles/styles.module.scss";
+@import "./../components/VideoSection/styles/styles.module.scss";
 
+.statsLine {
+  width: 100%;
+  height: 1.5px;
+  background-color: #3e3b3f;
+}
