--- a/src/styles/config/base.scss
+++ b/src/styles/config/base.scss
@@ -1,9 +1,6 @@
-@import "variables";
-
 body {
-  font-family: var(--font-family);
   min-width: 1110px;
-  background: #4e4b59;
+  background: var(--background-color);
 }
 
 //Flexbox
@@ -343,14 +340,174 @@ body {
   text-align: center;
 }
 
-.text-regular-b6 {
-  font-size: 16px;
-  color: #b6b6b6;
-  font-weight: 400;
+.h1-400 {
+  font-size: var(--text-size-h1);
+  font-weight: var(--text-weight-regular);
 }
 
-.text-large-ff {
-  font-weight: 400;
-  font-size: 28px;
-  color: #ffffff;
+.h1-500 {
+  font-size: var(--text-size-h1);
+  font-weight: var(--text-weight-medium);
+}
+
+.h1-700 {
+  font-size: var(--text-size-h1);
+  font-weight: var(--text-weight-bold);
+}
+
+.h2-400 {
+  font-size: var(--text-size-h2);
+  font-weight: var(--text-weight-regular);
+}
+
+.h2-500 {
+  font-size: var(--text-size-h2);
+  font-weight: var(--text-weight-medium);
+}
+
+.h2-700 {
+  font-size: var(--text-size-h2);
+  font-weight: var(--text-weight-bold);
+}
+
+.h3-400 {
+  font-size: var(--text-size-h3);
+  font-weight: var(--text-weight-regular);
+}
+
+.h3-500 {
+  font-size: var(--text-size-h3);
+  font-weight: var(--text-weight-medium);
+}
+
+.h3-700 {
+  font-size: var(--text-size-h3);
+  font-weight: var(--text-weight-bold);
+}
+
+.h4-400 {
+  font-size: var(--text-size-h4);
+  font-weight: var(--text-weight-regular);
+}
+
+.h4-500 {
+  font-size: var(--text-size-h4);
+  font-weight: var(--text-weight-medium);
+}
+
+.h4-700 {
+  font-size: var(--text-size-h4);
+  font-weight: var(--text-weight-bold);
+}
+
+.h5-400 {
+  font-size: var(--text-size-h5);
+  font-weight: var(--text-weight-regular);
+}
+
+.h5-500 {
+  font-size: var(--text-size-h5);
+  font-weight: var(--text-weight-medium);
+}
+
+.h5-700 {
+  font-size: var(--text-size-h5);
+  font-weight: var(--text-weight-bold);
+}
+
+.h6-400 {
+  font-size: var(--text-size-h6);
+  font-weight: var(--text-weight-regular);
+}
+
+.h6-500 {
+  font-size: var(--text-size-h6);
+  font-weight: var(--text-weight-medium);
+}
+
+.h6-700 {
+  font-size: var(--text-size-h6);
+  font-weight: var(--text-weight-bold);
+}
+
+.text-normal-400 {
+  font-size: var(--text-size-normal);
+  font-weight: var(--text-weight-regular);
+}
+
+.text-normal-500 {
+  font-size: var(--text-size-normal);
+  font-weight: var(--text-weight-medium);
+}
+
+.text-normal-700 {
+  font-size: var(--text-size-normal);
+  font-weight: var(--text-weight-bold);
+}
+
+.text-small-400 {
+  font-size: var(--text-size-small);
+  font-weight: var(--text-weight-regular);
+}
+
+.text-small-500 {
+  font-size: var(--text-size-small);
+  font-weight: var(--text-weight-medium);
+}
+
+.text-small-700 {
+  font-size: var(--text-size-small);
+  font-weight: var(--text-weight-bold);
+}
+
+.line-height-150 {
+  line-height: 150%;
+}
+
+.color-black1 {
+  color: var(--color-black-7);
+}
+
+.color-black {
+  color: var(--color-black);
+}
+
+.color-black-1 {
+  color: var(--color-black-2);
+}
+
+.color-black-2 {
+  color: var(--color-black-2);
+}
+
+.color-black-3 {
+  color: var(--color-black-3);
+}
+
+.color-black-4 {
+  color: var(--color-black-4);
+}
+
+.color-black-5 {
+  color: var(--color-black-5);
+}
+
+.color-black-6 {
+  color: var(--color-black-6);
+}
+
+.color-black-7 {
+  color: var(--color-black-7);
+}
+
+.color-black-8 {
+  color: var(--color-black-8);
+}
+
+.color-black-9 {
+  color: var(--color-black-9);
+}
+
+.color-black-10 {
+  color: var(--color-black-9);
 }
