✨ HowToPlay added HowToPlay section and dependecies

--- a/src/app/landing/styles/styles.scss
+++ b/src/app/landing/styles/styles.scss
@@ -1,6 +1,7 @@
 @import "./../components/LastNewsSection/styles/styles.module.scss";
 @import "./../components/StatsSection/styles/styles.module.scss";
 @import "./../components/VideoSection/styles/styles.module.scss";
+@import "./../components/HowToPlay/styles/styles.module.scss";
 
 .statsLine {
   width: 100%;
