--- a/src/components/Accordion/styles/styles.module.scss
+++ b/src/components/Accordion/styles/styles.module.scss
@@ -1,20 +1,36 @@
 .accordion-header {
+  background-color: var(--color-black-1);
   cursor: pointer;
-  border-bottom: 1px solid #ddd;
-  transition: border-bottom 0.3s;
-}
-
-.accordion-header:hover {
-  border-bottom: 1px solid #aaa;
+  border-bottom: 1px solid var(--color-black-3);
+  border-radius: 10px 10px 0 0;
+  padding: 30px 25px;
 }
 
 .accordion-content {
   max-height: 0;
   overflow: hidden;
-  transition: max-height 0.3s;
+  transition: max-height 0.3s, opacity 0.3s;
+  padding: 30px 25px;
+  background-color: var(--color-black-1);
+  opacity: 0;
+  border-radius: 0 0 10px 10px;
+}
+
+.open {
+  max-height: 500px;
+  transform: translateY(0);
+  opacity: 1;
+  transition: all ease 0.3s;
+}
+
+.closed {
+  max-height: 0 !important;
+  opacity: 0;
+  padding: 0 25px;
+  transition: all 0.2s, opacity 0.3s;
 }
 
 .accordion-content p {
   margin: 0;
-  padding: 10px;
+  padding: 10px 0;
 }
