--- a/src/styles/components/styles.scss
+++ b/src/styles/components/styles.scss
@@ -5,3 +5,4 @@
 @import "../../components/Accordion/styles/styles.module.scss";
 @import "../../components/Carousel/styles/styles.module.scss";
 @import "../../components/Card/styles/styles.module.scss";
+@import "../../components/Footer/styles/styles.module.scss";
