--- a/src/styles/config/base.scss
+++ b/src/styles/config/base.scss
@@ -24,6 +24,10 @@ body {
   justify-content: space-between;
 }
 
+.justify-content-around {
+  justify-content: space-around;
+}
+
 .justify-content-center {
   justify-content: center;
 }
