--- a/src/styles/config/base.scss
+++ b/src/styles/config/base.scss
@@ -1,6 +1,11 @@
+html {
+  height: 100%;
+}
+
 body {
   min-width: 1110px;
   background: var(--background-color);
+  transform-origin: top left;
 }
 
 //Flexbox
