✨ Landing Page estática alta fidelidade

--- a/src/app/landing/components/StatsSection/styles/styles.module.scss
+++ b/src/app/landing/components/StatsSection/styles/styles.module.scss
@@ -3,8 +3,9 @@
   .statsSectionContainer {
     display: flex;
     gap: 20px;
-    div {
-      max-width: 285px;
+
+    p {
+      max-width: 300px;
     }
   }
 }
