--- a/src/styles/config/variables.scss
+++ b/src/styles/config/variables.scss
@@ -40,9 +40,10 @@
   --text-size-normal: 16px;
   --text-size-small: 12px;
 
-  --text-weight-regular: 400;
-  --text-weight-medium: 500;
-  --text-weight-bold: 700;
+  --text-weight-regular: 300;
+  --text-weight-medium: 400;
+  --text-weight-bold: 600;
+  --text-weight-extrabold: 700;
 
   --background-color: var(--color-black);
   --header-background-color: var(--color-black1);
