--- a/src/app/landing/components/VideoSection/styles/styles.module.scss
+++ b/src/app/landing/components/VideoSection/styles/styles.module.scss
@@ -1,7 +1,7 @@
 .videoSection {
   position: relative;
   width: 100%;
-  height: 448px;
+  height: 528px;
 }
 
 .background-video {
@@ -9,16 +9,20 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 448px;
+  height: 528px;
   object-fit: cover;
 }
 
 .centered-content {
   position: absolute;
-  top: 50%;
+  top: 61%;
   left: 50%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   transform: translate(-50%, -50%);
   text-align: center;
+  display: flex;
   .videoSectionText {
     margin-bottom: 15px;
   }
