--- a/src/components/Accordion/styles/styles.module.scss
+++ b/src/components/Accordion/styles/styles.module.scss
@@ -3,34 +3,45 @@
   cursor: pointer;
   border-bottom: 1px solid var(--color-black-3);
   border-radius: 10px 10px 0 0;
+  transition: border-radius ease 0.5s;
   padding: 30px 25px;
 }
 
 .accordion-content {
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 0.3s, opacity 0.3s;
   padding: 30px 25px;
   background-color: var(--color-black-1);
-  opacity: 0;
   border-radius: 0 0 10px 10px;
+  word-break: break-word;
 }
 
 .open {
   max-height: 500px;
   transform: translateY(0);
-  opacity: 1;
-  transition: all ease 0.3s;
+  transition: all ease 0.2s;
+  span {
+    transition: opacity 0.1s;
+    opacity: 1;
+  }
 }
 
 .closed {
   max-height: 0 !important;
-  opacity: 0;
   padding: 0 25px;
-  transition: all 0.2s, opacity 0.3s;
+  transform: translateY(0px);
+  transition: all 0.2s, opacity 0.1s;
+  span {
+    transition: opacity 0.1s;
+    opacity: 0;
+  }
 }
 
 .accordion-content p {
   margin: 0;
   padding: 10px 0;
+}
+
+.accordion-icon {
+  &:hover {
+    fill: #fff;
+  }
 }
