--- a/src/components/Header/styles/styles.module.scss
+++ b/src/components/Header/styles/styles.module.scss
@@ -1,6 +1,12 @@
 .headerModule {
   background: var(--header-background-color);
   height: 80px;
+  position: fixed;
+  width: 100%;
+  z-index: 100;
+  opacity: 80%;
+  top: 0;
+  transition: all ease 0.2s;
   .headerContainer {
     margin: 0 165px;
     background: var(--header-background-color);
@@ -19,10 +25,25 @@
       width: 100%;
       gap: 25px;
       align-items: center;
+      justify-content: center;
     }
     .headerButtonGroup {
-      gap: 5px;
+      gap: 15px;
       margin: 0 35px;
     }
   }
+}
+
+.headerItem {
+  &:hover {
+    font-weight: var(--font-weight-medium);
+  }
+  &:active {
+    font-weight: var(--font-weight-medium);
+    color: var(--color-black-5);
+  }
+}
+.header-opacity {
+  opacity: 100%;
+  transition: all ease 0.2s;
 }
