--- a/src/app/landing/styles/styles.scss
+++ b/src/app/landing/styles/styles.scss
@@ -3,6 +3,7 @@
 @import "./../components/LastNewsSection/styles/styles.module.scss";
 @import "./../components/StatsSection/styles/styles.module.scss";
 @import "./../components/VideoSection/styles/styles.module.scss";
+@import "./../components/ModalBody/styles/styles.module.scss";
 
 .statsLine {
   width: 100%;
