--- a/src/components/Modal/styles/styles.module.scss
+++ b/src/components/Modal/styles/styles.module.scss
@@ -1,10 +1,13 @@
 .modalModule {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  position: fixed;
+  z-index: 101;
+  background-color: rgba(70, 68, 72, 0.7);
+  transition: all ease 0.2s;
 }
 
 .modalContainer {
@@ -13,8 +16,8 @@
   align-items: center;
   justify-content: space-between;
   background-color: #000;
-  width: 600px;
-  height: 650px;
+  width: 730px;
+  padding-bottom: 30px;
   border-radius: 16px;
   margin: 0 auto;
   max-height: 90%;
@@ -22,32 +25,27 @@
 }
 
 .modalHeader {
-  height: 10%;
+  min-height: 70px;
   display: flex;
   align-items: center;
-  min-height: 50px;
   width: 100%;
-  .modalHeader--icon {
-    width: 50px;
-    margin-bottom: 8px;
-    padding: 0 10px;
-    .buttonRoundEffect {
-      transition: all 0.2s ease-in-out;
-      padding: 7px;
-      width: fit-content;
-      border-radius: 30px;
-      height: 34px;
-      cursor: pointer;
-    }
+  padding: 0 30px 0 40px;
+
+  .buttonRoundEffect {
+    transition: all 0.2s ease-in-out;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    border-radius: 20px;
+    transition: all ease 0.2s;
     &:hover {
-      .buttonRoundEffect {
-        transition: all 0.2s ease-in-out;
-        padding: 7px;
-        background-color: #ffffff1a;
-        width: fit-content;
-        border-radius: 30px;
-        height: 34px;
-      }
+      transition: all 0.2s ease-in-out;
+      background-color: #ffffff1a;
+      padding: 10px;
+      display: flex;
+      align-items: center;
+      border-radius: 20px;
+      transition: all ease 0.2s;
     }
   }
   .modalHeader--content {
@@ -66,7 +64,6 @@
   padding: 0 32px;
   height: 100%;
   min-width: 364px;
-  width: 300px;
   display: flex;
   align-items: center;
   justify-content: center;
