🚧 Login modal fix some minor ui bugs

--- a/src/app/landing/components/ModalBody/styles/styles.module.scss
+++ b/src/app/landing/components/ModalBody/styles/styles.module.scss
@@ -1,6 +1,10 @@
 .modal-logo {
   margin-bottom: 50px;
+  transform: scale(1.5);
 }
 .h5-modal {
+  margin-bottom: 30px;
+}
+.modal-socialMedia {
   margin-bottom: 30px;
 }
