--- a/src/components/Header/styles/styles.module.scss
+++ b/src/components/Header/styles/styles.module.scss
@@ -25,7 +25,7 @@
       width: 100%;
       gap: 25px;
       align-items: center;
-      justify-content: center;
+      justify-content: space-between;
     }
     .headerButtonGroup {
       gap: 15px;
