--- a/src/styles/components/styles.scss
+++ b/src/styles/components/styles.scss
@@ -1,6 +1,6 @@
 @import "../../components/Header/styles/styles.module.scss";
 @import "../../components/Modal/styles/styles.module.scss";
-// @import "../../components/InputText/styles/styles.module.scss";
+@import "../../components/Input/styles/styles.module.scss";
 @import "../../components/Button/styles/styles.module.scss";
 @import "../../components/Accordion/styles/styles.module.scss";
 @import "../../components/Carousel/styles/styles.module.scss";
