--- a/src/styles/config/base.scss
+++ b/src/styles/config/base.scss
@@ -515,3 +515,47 @@ body {
 .color-black-10 {
   color: var(--color-black-9);
 }
+
+.color-primary3 {
+  color: var(--color-primary3);
+}
+
+.color-primary2 {
+  color: var(--color-primary2);
+}
+
+.color-primary1 {
+  color: var(--color-primary1);
+}
+
+.color-primary {
+  color: var(--color-primary);
+}
+
+.color-primary-1 {
+  color: var(--color-primary-1);
+}
+
+.color-primary-2 {
+  color: var(--color-primary-2);
+}
+
+.color-primary-3 {
+  color: var(--color-primary-3);
+}
+
+.color-primary-4 {
+  color: var(--color-primary-4);
+}
+
+.color-primary-5 {
+  color: var(--color-primary-5);
+}
+
+.color-primary-6 {
+  color: var(--color-primary-6);
+}
+
+.color-primary-7 {
+  color: var(--color-primary-7);
+}
