--- a/src/app/landing/components/ModalBody/styles/styles.module.scss
+++ b/src/app/landing/components/ModalBody/styles/styles.module.scss
@@ -8,3 +8,19 @@
 .modal-socialMedia {
   margin-bottom: 30px;
 }
+
+.forgotPassword {
+  margin-bottom: 40px;
+}
+
+.password-requirements {
+  list-style-type: disc;
+  padding: 0 0 0 20px;
+  margin-bottom: 30px;
+}
+
+.registerTerms {
+  text-align: center;
+  margin-bottom: 20px;
+  padding: 0 15px;
+}
