--- a/src/components/Header/styles/styles.module.scss
+++ b/src/components/Header/styles/styles.module.scss
@@ -1,6 +1,6 @@
 .headerModule {
   background: var(--header-background-color);
-  height: 80px;
+  min-height: 80px;
   position: fixed;
   width: 100%;
   z-index: 100;
@@ -14,7 +14,7 @@
     justify-content: space-between;
     max-width: 1110px;
     min-width: 1000px;
-    height: 80px;
+    min-height: 80px;
     margin: 0 auto;
     align-items: center;
     .headerLogo {
@@ -25,7 +25,7 @@
       width: 100%;
       gap: 25px;
       align-items: center;
-      justify-content: center;
+      justify-content: space-between;
     }
     .headerButtonGroup {
       gap: 15px;
