--- a/src/components/Modal/styles/styles.module.scss
+++ b/src/components/Modal/styles/styles.module.scss
@@ -1,10 +1,13 @@
 .modalModule {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  position: fixed;
+  z-index: 101;
+  background-color: rgba(70, 68, 72, 0.7);
+  transition: all ease 0.2s;
 }
 
 .modalContainer {
@@ -12,51 +15,50 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  background-color: #000;
-  width: 600px;
-  height: 650px;
-  border-radius: 16px;
+  width: 730px;
+  padding-bottom: 30px;
   margin: 0 auto;
   max-height: 90%;
-  overflow: auto;
+  position: fixed;
+  bottom: 50px;
 }
 
 .modalHeader {
-  height: 10%;
+  min-height: 70px;
   display: flex;
   align-items: center;
-  min-height: 50px;
   width: 100%;
-  .modalHeader--icon {
-    width: 50px;
-    margin-bottom: 8px;
-    padding: 0 10px;
-    .buttonRoundEffect {
-      transition: all 0.2s ease-in-out;
-      padding: 7px;
-      width: fit-content;
-      border-radius: 30px;
-      height: 34px;
-      cursor: pointer;
-    }
+  padding: 0 30px 0 40px;
+  border-radius: 10px 10px 0 0;
+  background-color: var(--color-black);
+
+  .buttonRoundEffect {
+    transition: all 0.2s ease-in-out;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    border-radius: 20px;
+    transition: all ease 0.2s;
     &:hover {
-      .buttonRoundEffect {
-        transition: all 0.2s ease-in-out;
-        padding: 7px;
-        background-color: #ffffff1a;
-        width: fit-content;
-        border-radius: 30px;
-        height: 34px;
-      }
+      transition: all 0.2s ease-in-out;
+      background-color: #ffffff1a;
+      padding: 10px;
+      display: flex;
+      align-items: center;
+      border-radius: 20px;
+      transition: all ease 0.2s;
     }
   }
   .modalHeader--content {
     display: flex;
     justify-content: center;
     flex: 5;
-    margin-bottom: 12px;
     margin-left: 1px;
   }
+}
+
+.modalHeader--content {
+  min-height: auto;
 }
 
 .modalBody {
@@ -66,28 +68,12 @@
   padding: 0 32px;
   height: 100%;
   min-width: 364px;
-  width: 300px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 @media screen and (max-width: 768px) {
-  .blur {
-    backdrop-filter: blur(12px);
-    background-color: rgba(0, 0, 0, 0.65);
-    position: fixed;
-    z-index: 1;
-    width: 100%;
-    height: 50px;
-  }
-  .modalHeader {
-    position: fixed;
-    z-index: 1;
-    width: 100%;
-    height: 50px;
-  }
-
   .modalContainer {
     width: 100%;
     max-height: 100%;
@@ -112,8 +98,11 @@
 .modalBodyFooterContainer {
   display: flex;
   justify-content: center;
-  margin: 20px 0;
+  padding: 20px 0;
   width: 100%;
+  background-color: var(--color-black);
+  border-radius: 0 0 10px 10px;
+  overflow: auto;
 }
 
 @media screen and (max-width: 425px) {
