--- a/src/styles/components/styles.scss
+++ b/src/styles/components/styles.scss
@@ -6,3 +6,4 @@
 @import "../../components/Carousel/styles/styles.module.scss";
 @import "../../components/Card/styles/styles.module.scss";
 @import "../../components/Footer/styles/styles.module.scss";
+@import "../../components/Body/styles/styles.module.scss";
