--- a/src/app/landing/components/StatsSection/styles/styles.module.scss
+++ b/src/app/landing/components/StatsSection/styles/styles.module.scss
@@ -10,6 +10,9 @@
   }
 }
 
+.statsIcon {
+  margin-right: 20px;
+}
 .statsTitle {
   margin-bottom: 4px;
 }
@@ -17,4 +20,26 @@
   text-align: center;
   color: var(--color-random-gray);
   white-space: nowrap;
+}
+
+@media screen and (max-width: 1110px) {
+  .statsSectionModule {
+    .statsSectionContainer {
+      display: flex;
+      gap: 20px;
+      flex-direction: column;
+      p {
+        max-width: 100%;
+      }
+    }
+  }
+  .statsItem {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .statsIcon {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
 }
