--- a/src/styles/config/base.scss
+++ b/src/styles/config/base.scss
@@ -1,6 +1,7 @@
 body {
   min-width: 1110px;
   background: var(--background-color);
+  min-height: 100vh;
 }
 
 @media screen and (max-width: 1110px) {
