--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,3 +4,13 @@
   background-color: black;
   margin: 6px 0;
 }
+
+.pageBody {
+  padding-top: 150px;
+}
+
+.hr-line {
+  border: 0;
+  height: 1px;
+  background: #5f5c6b;
+}
