--- a/src/app/landing/styles/styles.scss
+++ b/src/app/landing/styles/styles.scss
@@ -1,3 +1,4 @@
+@import "./../components/FAQ/styles/styles.module.scss";
 @import "./../components/FeaturesSection/styles/styles.module.scss";
 @import "./../components/HowToPlay/styles/styles.module.scss";
 @import "./../components/LastNewsSection/styles/styles.module.scss";
