--- a/src/components/Modal/styles/styles.module.scss
+++ b/src/components/Modal/styles/styles.module.scss
@@ -66,19 +66,14 @@
 .modalBody {
   position: relative;
   display: block;
-  margin: 15px auto;
+  margin-bottom: 15px;
   padding: 0 32px;
   height: 100%;
   min-width: 364px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .modalBodyFooterContainer {
-  display: flex;
-  justify-content: center;
-  padding: 20px 0;
+  // padding: 20px 0;
   width: 100%;
   background-color: var(--color-black);
   border-radius: 0 0 10px 10px;
