--- a/src/components/Accordion/styles/styles.module.scss
+++ b/src/components/Accordion/styles/styles.module.scss
@@ -15,16 +15,14 @@
 
 .open {
   max-height: 500px;
-  transform: translateY(0px);
   opacity: 1;
-  transition: all ease 0.2s;
+  transition: height ease 0.3s, opacity ease 0.5s, transform ease 0.3s;
 }
 
 .closed {
-  max-height: 0 !important;
-  transform: translateY(10px);
+  max-height: 0px !important;
   opacity: 0;
-  transition: all 0.2s;
+  transition: height ease 0.3s, opacity ease 0.5s, transform ease 0.3s;
 }
 
 .accordion-content p {
