--- a/src/components/Body/styles/styles.module.scss
+++ b/src/components/Body/styles/styles.module.scss
@@ -5,11 +5,12 @@
 }
 @media screen and (max-width: 1110px) {
   .sectionBody {
-    max-width: 600px;
+    // max-width: 600px;
+    margin: 0 20px;
   }
 }
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 768px) {
   .sectionBody {
-    max-width: 320px;
+    margin: 0 20px;
   }
 }
