--- a/src/components/Carousel/styles/styles.module.scss
+++ b/src/components/Carousel/styles/styles.module.scss
@@ -1,10 +1,11 @@
 .carousel-container {
   display: flex;
   position: relative;
-  justify-content: center;
+  // justify-content: center;
   overflow: hidden;
   width: 90%;
   margin: 0 auto;
+  user-select: all;
 }
 
 .carousel-align {
@@ -12,7 +13,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  min-width: 600px;
+  position: relative;
 }
 
 .carousel-items-container {
@@ -81,13 +82,22 @@
   margin-bottom: 85px;
 }
 
-@media screen and (max-width: 640px) {
-  .carousel-align {
-    min-width: 320px;
+@media screen and (max-width: 1110px) {
+  .carousel-container {
+    width: 100%;
   }
   .carousel-button {
-    width: 30px;
+    position: absolute;
+    z-index: 1;
+    &.left {
+      left: 0;
+    }
+    &.right {
+      right: 0;
+    }
   }
+}
+@media screen and (max-width: 768px) {
   .carouselTitle {
     flex-direction: column;
     margin-bottom: 10px;
