📱 Fix responsive bug

--- a/src/components/Body/styles/styles.module.scss
+++ b/src/components/Body/styles/styles.module.scss
@@ -1,8 +1,10 @@
-.sectionBody {
+.sectionBody,
+.carouselSectionBody {
   position: relative;
   max-width: 1110px;
   margin: 0 auto;
 }
+
 @media screen and (max-width: 1110px) {
   .sectionBody {
     // max-width: 600px;
