🚧 RadioGroup New component

--- a/src/styles/components/styles.scss
+++ b/src/styles/components/styles.scss
@@ -7,3 +7,4 @@
 @import "../../components/Card/styles/styles.module.scss";
 @import "../../components/Footer/styles/styles.module.scss";
 @import "../../components/Body/styles/styles.module.scss";
+@import "../../components/RadioGroup/styles/styles.module.scss";
