--- a/src/app/landing/components/FeaturesSection/styles/styles.module.scss
+++ b/src/app/landing/components/FeaturesSection/styles/styles.module.scss
@@ -1,3 +1,6 @@
+.features-section {
+}
+
 .featuresH6Margin {
   margin: 11px 0;
   text-align: center;
@@ -14,12 +17,16 @@
 }
 
 @media screen and (max-width: 768px) {
+  .features-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   .featuresContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
-    margin-top: 10px;
+    justify-content: center;
     h6 {
       font-size: 14px;
     }
