--- a/src/styles/app/styles.scss
+++ b/src/styles/app/styles.scss
@@ -1,2 +1,3 @@
 @import "../../app/landing/styles/styles.scss";
 @import "../../app/dashboard/styles/styles.scss";
+@import "../../app/challenge/styles/styles.scss";
