--- a/src/styles/config/variables.scss
+++ b/src/styles/config/variables.scss
@@ -39,6 +39,7 @@
   --text-size-h6: 21px;
   --text-size-normal: 16px;
   --text-size-small: 12px;
+  --text-size-extra-small: 9px;
 
   --text-weight-regular: 300;
   --text-weight-medium: 400;
