--- a/src/styles/components/styles.scss
+++ b/src/styles/components/styles.scss
@@ -8,3 +8,4 @@
 @import "../../components/Footer/styles/styles.module.scss";
 @import "../../components/Body/styles/styles.module.scss";
 @import "../../components/RadioGroup/styles/styles.module.scss";
+@import "../../components/Tag/styles/styles.module.scss";
