✨ Home High fidelity layout

--- a/src/app/dashboard/components/ModalBody/styles/styles.module.scss
+++ b/src/app/dashboard/components/ModalBody/styles/styles.module.scss
@@ -1,3 +1,11 @@
+.fastGameModalBody {
+  padding: 0 63px;
+  margin-bottom: 30px;
+  .fastGameModalTitle {
+    margin-bottom: 30px;
+    width: 100%;
+  }
+}
 .addGameModalBody {
   padding: 0 63px;
   min-height: 600px;
