--- a/src/app/dashboard/styles/styles.scss
+++ b/src/app/dashboard/styles/styles.scss
@@ -7,18 +7,22 @@
   margin-bottom: 30px;
 }
 
+.home-action-card {
+  cursor: pointer;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
 .my-games-image {
   display: flex;
   justify-content: center;
   object-fit: fill;
   width: 100%;
   height: 50px;
-}
-
-.fast-game {
-  position: absolute;
-  right: 20%;
-  top: 25%;
 }
 
 .my-games-card-container {
@@ -28,4 +32,36 @@
   justify-content: space-between;
   height: 100%;
   padding: 15px 25px 15px 25px;
+  user-select: none;
+}
+
+.arrowCard {
+  position: absolute;
+  right: 20px;
+}
+
+.fast-game {
+  position: absolute;
+  right: 20%;
+  top: 25%;
+  cursor: pointer;
+  z-index: 0;
+  user-select: none;
+}
+
+.fast-game-card {
+  filter: brightness(0.6);
+  cursor: pointer;
+  &:hover {
+    filter: brightness(0.8);
+  }
+  &:active {
+    filter: brightness(1);
+  }
+}
+.fast-game-card-hover {
+  filter: brightness(0.8);
+}
+.fast-game-card-active {
+  filter: brightness(1);
 }
