--- a/src/app/dashboard/styles/styles.scss
+++ b/src/app/dashboard/styles/styles.scss
@@ -65,3 +65,39 @@
 .fast-game-card-active {
   filter: brightness(1);
 }
+
+.levelTag {
+  text-align: center;
+  width: 60px;
+  height: 18px;
+  background: rgba(255, 255, 255, 0.2);
+  border: 0.2px solid #99959b;
+  backdrop-filter: blur(3px);
+  border-radius: 10px;
+  position: absolute;
+  bottom: -5px;
+  left: 33%;
+  z-index: 2;
+}
+.levelStats {
+  position: absolute;
+  bottom: 25px;
+  left: 28%;
+  z-index: 2;
+  position: absolute;
+  width: 75px;
+  height: 33px;
+  background: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(5px);
+  border-radius: 5px;
+  text-align: center;
+  font-size: var(--text-size-extra-small);
+}
+.levelStatsOff {
+  opacity: 0;
+  transition: all ease 0.2s;
+}
+.levelStatsHover {
+  opacity: 1;
+  transition: all ease 0.2s;
+}
