--- a/src/app/dashboard/styles/styles.scss
+++ b/src/app/dashboard/styles/styles.scss
@@ -26,6 +26,7 @@
 }
 
 .my-games-card-container {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -100,4 +101,15 @@
 .levelStatsHover {
   opacity: 1;
   transition: all ease 0.2s;
+}
+
+.nationalityTag {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 60px;
+  height: 21px;
+  background: #3e3b3f;
+  border-radius: 100px;
+  margin-bottom: 30px;
 }
