--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -22,7 +22,9 @@
 }
 
 .profilePicture {
-  width: 160px;
-  height: 160px;
+  max-width: 160px;
+  min-width: 160px;
+  max-height: 160px;
+  min-height: 160px;
   border-radius: 500px;
 }
