--- a/src/app/landing/components/StatsSection/styles/styles.module.scss
+++ b/src/app/landing/components/StatsSection/styles/styles.module.scss
@@ -1,46 +1,14 @@
-.statsSectionModule {
-  padding: 55px 0;
-  .statsSectionContainer {
-    display: flex;
-    gap: 20px;
-
-    p {
-      max-width: 300px;
-    }
-  }
+.h3-text-animation-outline {
+  width: fit-content;
+  color: #29272a;
+  text-shadow: -0.7px -0.7px 0 #3e3b3f, 0.7px -0.7px 0 #3e3b3f,
+    -0.7px 0.7px 0 #3e3b3f, 0.7px 0.7px 0 #3e3b3f;
+  font-size: 50px;
+  font-weight: 700;
 }
-
-.statsIcon {
-  margin-right: 20px;
-}
-.statsTitle {
-  margin-bottom: 4px;
-}
-.statsDescription {
-  text-align: center;
-  color: var(--color-random-gray);
-  white-space: nowrap;
-}
-
-@media screen and (max-width: 1110px) {
-  .statsSectionModule {
-    .statsSectionContainer {
-      display: flex;
-      gap: 20px;
-      flex-direction: column;
-      p {
-        max-width: 100%;
-        text-align: center;
-      }
-    }
-  }
-  .statsItem {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  .statsIcon {
-    margin-right: 0;
-    margin-bottom: 20px;
-  }
+.h3-text-animation {
+  width: fit-content;
+  color: var(--color-black-1);
+  font-size: 50px;
+  font-weight: 700;
 }
